2000-04-20  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-summary.c (message_struct_new): Trim
	leading/trailing spaces off the raw headers.

	* MERGE NEW_PARSER branch into HEAD, fixed conflicts.
	
	* gmime-content-field.c (_print_parameter): Duh, removed again
	(@@#$@ cvs merge).

	* camel-mime-utils.c (header_content_type_is): Constify.
	(header_content_type_unref): Killed a couple warnings.

	* camel-folder.c (_init): Removed more log crap.

	* providers/Makefile.am (SUBDIRS): Removed nntp, pending fixes for
	summary changes.

	* providers/mbox/camel-mbox-folder.c (_get_message_by_number):
	Fixed for new summary interface.  Added a warning for using this
	broken api.
	(_get_message_by_uid): Fixed for message new with session
	vanishing.

2000-04-19  Dan Winship  <danw@helixcode.com>

	* camel-simple-data-wrapper-stream.c
	(camel_simple_data_wrapper_stream_get_type): This is a subtype of
	CamelSeekableStream, not CamelStream.

	* camel-seekable-substream.c: clean up a lot.
	(eos): When testing for end-of-stream, reset the parent position
	before testing if it is at end-of-stream, since either (a) it may
	have been seek'ed to eos by someone else, or (b) we may have been
	seek'ed away from eos and it hasn't been synced yet.

	* camel-medium.[ch] (camel_medium_add_header): const poison.
	(Belatedly goes with my change of 2000-02-23.)
	(camel_medium_init): Use g_strcase_{hash,equal} on the header
	array.
	
2000-04-18  Dan Winship  <danw@helixcode.com>

	* camel-mime-part.c (my_set_input_stream): 
	* camel-data-wrapper.c (set_input_stream, set_output_stream): do
	better reference counting of streams so they actually go away
	when they should.

	* camel-log.[ch], *: Nuke camel log stuff. Replace calls to
	CAMEL_LOG_WARNING with calls to g_warning.

	* camel-data-wrapper.[ch]:
	* camel-simple-data-wrapper.[ch]:
	* camel-medium.[ch]: Clean, polish, document. Most of the gtk-doc
	comments added to camel-data-wrapper.c note serious problems that